--- a/src/css/shared.css
+++ b/src/css/shared.css
@@ -9,18 +9,30 @@ html {
 body {
   margin: 0;
   padding: 0;
-  font-family: Roboto, -apple-system, Helvetica Neue, Helvetica, Segoe UI, Arial, sans-serif;
+  font-family: var(--base-fonts-stack);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-size: 16px;
+  font-size: var(--base-fontsize);
   font-weight: 400;
+  color: var(--typography-dark);
+  line-height: 1.2;
 }
 
-h2 {
-  font-family: FuturaBook, Roboto, -apple-system, Helvetica Neue, Helvetica, Segoe UI, Arial, sans-serif;
+h1, h2, h3, h4, h5 {
+  font-family: var(--title-fonts);
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-  monospace;
+  font-family: var(--code-snippet-fonts);
+}
+
+.visuallyhidden {
+  position: absolute;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  width: 1px;
+  margin: -1px;
+  padding: 0;
+  border: 0;
 }
