add basic conversion functions

--- a/src/css/fonts.css
+++ b/src/css/fonts.css
@@ -1,7 +1,7 @@
 @font-face {
   font-family: 'Roboto';
-  src: local('Roboto'), url(./../assets/fonts/Roboto.woff) format('woff');
-  src: local('Roboto'), url(./../assets/fonts/Roboto.woff2) format('woff2');
+  src: local('Roboto'), url(./../assets/fonts/Robotolight.woff) format('woff');
+  src: local('Roboto'), url(./../assets/fonts/Robotolight.woff2) format('woff2');
 }
 
 @font-face {
