--- a/src/components/Navigation/navigation.module.css
+++ b/src/components/Navigation/navigation.module.css
@@ -39,12 +39,18 @@
   border-radius: 50%;
   top: 50%;
   left: 50%;
+  color: var(--contrast-white);
   transform: translateX(-50%) translateY(-50%);
-  background-color: var(--contrast-white);
+  background-color: currentColor;
 }
 
 .btn.active {
   opacity: 1;
+}
+
+.btn:focus {
+  border: 1px solid var(--contrast-white);
+  outline: none;
 }
 
 @media (min-width: 740px) {
